--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Portfolio</title>
+  <title>About | My Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Unna&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -11,7 +11,6 @@
 
   <header class="navbar">
     <a href="index.html" id="logo">MY PORTFOLIO</a>
-
     <nav>
       <input type="checkbox" id="menu-toggle" class="menu-toggle" />
       <label for="menu-toggle" class="hamburger" aria-label="Open navigation menu" tabindex="0">
@@ -28,11 +27,11 @@
   </header>
 
   <main class="content-grid">
-    <div class="grid-image">
-      <img src="2.jpg" alt="My Picture">
-    </div>
-    <h1 class="grid-name">HI, I'M CALATCAT, DARYL RAIN</h1>
-    <p class="grid-info">I AM A 3RD YEAR BSINT STUDENT OF NORSU BAIS CAMPUS 1.</p>
+    <h1>About Me: </h1>
+    <p style="grid-column: 3 / 9; text-align: center;">
+      Hello! I’m Daryl Rain Calatcat, a passionate 3rd year BS Information Technology student at NORSU Bais Campus 1.
+      I love designing, coding, and learning new technologies that can make the world a little smarter and easier.
+    </p>
   </main>
 
   <footer class="footer">
