--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Portfolio</title>
+  <title>Contact | My Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Unna&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -11,7 +11,6 @@
 
   <header class="navbar">
     <a href="index.html" id="logo">MY PORTFOLIO</a>
-
     <nav>
       <input type="checkbox" id="menu-toggle" class="menu-toggle" />
       <label for="menu-toggle" class="hamburger" aria-label="Open navigation menu" tabindex="0">
@@ -27,13 +26,27 @@
     </nav>
   </header>
 
-  <main class="content-grid">
-    <div class="grid-image">
-      <img src="2.jpg" alt="My Picture">
-    </div>
-    <h1 class="grid-name">HI, I'M CALATCAT, DARYL RAIN</h1>
-    <p class="grid-info">I AM A 3RD YEAR BSINT STUDENT OF NORSU BAIS CAMPUS 1.</p>
-  </main>
+<main class="content-grid">
+  <h1>Contact Me</h1>
+  <p style="grid-column: 3 / 9; text-align: center;">
+    You can reach me through:
+    <br><br>
+    📧 Email: 
+    <a href="mailto:darylrain7@gmail.com" style="color: yellow; text-decoration: none;">
+      <strong>darylrain7@gmail.com</strong>
+    </a><br>
+
+    📱 Phone: 
+    <a href="tel:+639948344158" style="color: yellow; text-decoration: none;">
+      <strong>+63 994 834 4158</strong>
+    </a><br>
+
+    🌐 Facebook: 
+    <a href="https://facebook.com/lazarus.027" target="_blank" style="color: yellow; text-decoration: none;">
+      <strong>facebook.com/darylraincalatcat</strong>
+    </a>
+  </p>
+</main>
 
   <footer class="footer">
     <p>© 2025 My Portfolio</p>
